# instacart-market-basket-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  runner-test.yaml  terraform-apply.yaml  terraform-plan.yaml  terraform-pr.yaml  terraform-validation.yaml  terraform.yaml
infra/bootstrap/: apis.tf  backend.tf  iam.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf  workload_identity.tf
infra/environments/dev/: api.tf  backend.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
infra/environments/prod/: api.tf  backend.tf  variables.tf
infra/modules/dataproc/: main.tf  outputs.tf  variables.tf
infra/modules/gcs/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
scripts/: build_sample_dataset.py  create_sample_dataset.sh
src/instacart_etl/common/: paths.py  spark.py
src/instacart_etl/contracts/: orders.yaml
src/instacart_etl/sample/: build_sample_dataset.py
src/instacart_etl/validation/: exceptions.py  loader.py  message.py  models.py  range.py
tests/: conftest.py
tests/integration/sample/: test_sample_dataset_pipeline.py
tests/unit/sample/: test_build_sample_dataset.py
tests/unit/validation/: test_load_contract.py  test_range_validator.py
