[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "instacart-market-basket-prediction"
version = "0.1.0"
description = "Production-grade Instacart Market Basket Prediction pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"

authors = [
    {"name" = "Congxi Song"}
]

dependencies = [
    "pandas==2.2.3",
    "pyspark==3.5.1",
    "google-cloud-storage==3.2.0",
    "numpy==1.26.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.15.14",
    "pytest-cov>=6.0"
]

[tools.setuptools.package.find]
include = ["src"]

[tools.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

ignore = []

[tool.coverage.run]
source = ["src"]
omit= ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

